--- a/services.html
+++ b/services.html
@@ -47,7 +47,7 @@
     </section>
 
     <section class="maintenance">
-        <h1>PREVENTIVE MAINTENCANCE</h1>
+        <h1>PREVENTIVE MAINTENANCE</h1>
 
         <div class="row">
             <div class="maintenance-col">
