--- a/contactus.html
+++ b/contactus.html
@@ -48,7 +48,15 @@
                 <div>
                     <a href="#"><i class="fa fa-phone"></i></a> 
                     <span>
-                        <h5>(045) 861 4375</h5>
+                        <h5>(045) 861 4375 (Pampanga)</h5>
+                        <p>Monday to Friday, 8AM to 5PM</p>
+                    </span>
+                </div>
+
+                   <div>
+                    <a href="#"><i class="fa fa-phone"></i></a> 
+                    <span>
+                        <h5>8669-1937 (Mandaluyong)</h5>
                         <p>Monday to Friday, 8AM to 5PM</p>
                     </span>
                 </div>
